--- a/dates/Makefile
+++ b/dates/Makefile
@@ -2,14 +2,14 @@
 #
 
 DISTNAME=	dates-0.4.8
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	time gnome
 MASTER_SITES=	ftp://ftp.gnome.org/pub/gnome/sources/dates/0.4/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	pkgsrc.gnome@gmail.com
 HOMEPAGE=	http://www.pimlico-project.org/
-COMMENT=	Dates is a small, lightweight calenda
+COMMENT=	Dates is a small, lightweight calendar
 LICENSE=	gnu-lgpl-v2.1
 
 GNU_CONFIGURE=	yes
