--- a/atool/Makefile
+++ b/atool/Makefile
@@ -10,8 +10,9 @@ HOMEPAGE=	http://www.nongnu.org/atool
 COMMENT=	Script for managing various archives
 LICENSE=	gnu-gpl-v3
 
-USE_TOOLS+=	perl gmake
+USE_TOOLS+=	perl gmake bash
 GNU_CONFIGURE=	yes
 USE_LANGUAGES=	# none
+CONFIG_SHELL=	bash
 
 .include "../../mk/bsd.pkg.mk"
