--- a/dbus-explorer/Makefile
+++ b/dbus-explorer/Makefile
@@ -2,7 +2,7 @@
 #
 
 DISTNAME=	dbus-explorer-0.5
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	sysutils
 MASTER_SITES=	http://www.ndesk.org/archive/dbus-explorer/
 
@@ -16,7 +16,7 @@ USE_TOOLS+=		pkg-config msgfmt gmake
 USE_LANGUAGES=	# none
 
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
-.include "../../lang/mono/buildlink3.mk"
+.include "../../lang/mono2/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../sysutils/ndesk-dbus/buildlink3.mk"
 .include "../../sysutils/ndesk-dbus-glib/buildlink3.mk"
