--- a/gnome-keyring-sharp/Makefile
+++ b/gnome-keyring-sharp/Makefile
@@ -2,7 +2,7 @@
 #
 
 DISTNAME=	gnome-keyring-sharp-1.0.0
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	security
 MASTER_SITES=	http://ftp.novell.com/pub/mono/sources/gnome-keyring-sharp/
 EXTRACT_SUFX=	.tar.bz2
@@ -23,5 +23,5 @@ CONFIGURE_ARGS+=	--disable-monodoc
 
 .include "options.mk"
 
-.include "../../lang/mono/buildlink3.mk"
+.include "../../lang/mono2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
