--- a/lat/Makefile
+++ b/lat/Makefile
@@ -2,7 +2,7 @@
 #
 
 DISTNAME=		lat-1.2.3
-PKGREVISION=		4
+PKGREVISION=		5
 CATEGORIES=		databases
 MASTER_SITES=		http://dev.mmgsecurity.com/downloads/lat/1.2/
 
@@ -20,7 +20,7 @@ PKGCONFIG_OVERRIDE+=	desktop/lat-plugins.pc.in
 
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../x11/gtk-sharp/buildlink3.mk"
-.include "../../lang/mono/buildlink3.mk"
+.include "../../lang/mono2/buildlink3.mk"
 .include "../../security/gnome-keyring/buildlink3.mk"
 .include "../../converters/libiconv/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
