Fix PLIST subst

--- a/ptpd/Makefile
+++ b/ptpd/Makefile
@@ -19,6 +19,8 @@ WRKSRC=		${WRKDIR}/${DISTNAME}/src
 
 INSTALLATION_DIRS=	lib ${PKGMANDIR}/man8 sbin
 
+PLIST_SUBST+=	PKGVERSION_NOREV=${PKGVERSION_NOREV}
+
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/ptpd2 ${DESTDIR}${PREFIX}/sbin
 	${INSTALL_LIB} ${WRKSRC}/libptpd2.so ${DESTDIR}${PREFIX}/lib
