Generate PLIST.Darwin.

--- a/openmpi163/files/module.in
+++ b/openmpi163/files/module.in
@@ -1,21 +1,19 @@
 #%Module1.0#####################################################################
 proc ModulesHelp { } {
-    puts stdout "\n\tAll software installed via the pkgsrc package management"
-    puts stdout "\tsystem. This module prepends the pkgsrc directories to"
+    puts stdout "\n\tAll openmpi-based software installed via the pkgsrc package management"
+    puts stdout "\tsystem. This module prepends the pkgsrc openmpi directories to"
     puts stdout "\tthe following environment variable(s):"
-    puts stdout "\n\tPATH\n\tMANPATH\n\tLD_LIBRARY_PATH"
+    puts stdout "\n\tPATH\n\tMANPATH\n"
 }
 
-module-whatis   "All software installed via pkgsrc"
+module-whatis   "All openmpi-based software installed via pkgsrc"
 
-set     version         1
-set     install_prefix  /Users/bacon/Pkgsrc/pkg-1
+set     install_prefix  /Users/bacon/Pkgsrc/pkg-1/openmpi
 
-prepend-path    PATH            $install_prefix/bin
-prepend-path    PATH            $install_prefix/sbin
-prepend-path    MANPATH         $install_prefix/man
-prepend-path    LD_LIBRARY_PATH $install_prefix/lib
-setenv          PKGSRC          $install_prefix
-setenv          PKGSRC_INCLUDE  $install_prefix/include
-setenv          PKGSRC_LIB      $install_prefix/lib
-setenv          MPI_PREFIX      $install_prefix
+prepend-path    PATH			$install_prefix/bin
+prepend-path    PATH			$install_prefix/sbin
+prepend-path    MANPATH			$install_prefix/man
+setenv          PKGSRC_OPENMPI		$install_prefix
+setenv          PKGSRC_OPENMPI_INCLUDE	$install_prefix/include
+setenv          PKGSRC_OPENMPI_LIB	$install_prefix/lib
+setenv          MPI_PREFIX		$install_prefix
