Rename skeletal files, install etc/openmpi-default-hostfile.

--- a/openmpi163/files/module.in
+++ b/openmpi163/files/module.in
@@ -8,7 +8,7 @@ proc ModulesHelp { } {
 
 module-whatis   "All openmpi-based software installed via pkgsrc"
 
-set     install_prefix  /Users/bacon/Pkgsrc/pkg-1/openmpi
+set     install_prefix  %%MPI_PREFIX%%
 
 prepend-path    PATH			$install_prefix/bin
 prepend-path    PATH			$install_prefix/sbin
