--- a/meep-openmpi/Makefile
+++ b/meep-openmpi/Makefile
@@ -25,6 +25,7 @@ CONFIGURE_ARGS+=--with-libctl=${PREFIX}/share/libctl \
 
 .include "../../wip/mpb-openmpi/buildlink3.mk"
 .include "../../math/gsl/buildlink3.mk"
+.include "../../math/fftw2/buildlink3.mk"
 .include "../../devel/gettext-lib/buildlink3.mk"
 .include "../../converters/libiconv/buildlink3.mk"
 .include "../../math/harminv/buildlink3.mk"
