Update temporary hack for libguile loading

--- a/meep/Makefile
+++ b/meep/Makefile
@@ -23,9 +23,9 @@ TEST_TARGET=	check
 # Darwin needs libguile with a .so suffix and LD_LIBRARY_PATH to include
 # ${LOCALBASE}/lib
 .if ${OPSYS} == "Darwin"
+.for l in ${PREFIX}/lib/libguile-srfi-srfi-*.dylib
 post-install:
-	${CP} ${PREFIX}/lib/libguile-srfi-srfi-1-v-3.dylib \
-		${DESTDIR}${PREFIX}/lib/libguile-srfi-srfi-1-v-3.so
+	${CP} ${l} ${l%.dylib}.so
 .endif
 
 .include "../../wip/mpb/buildlink3.mk"
