--- a/dokuwiki/Makefile
+++ b/dokuwiki/Makefile
@@ -1,8 +1,8 @@
 # $NetBSD$
 #
 
-PKGVERSION=	2012.10.13
-DISTVERSION=	${PKGVERSION:S/./-/g}
+PKGVERSION=	20130510
+DISTVERSION=	2013-05-10a
 PKGNAME=	dokuwiki-${PKGVERSION}
 DISTNAME=	dokuwiki-${DISTVERSION}
 CATEGORIES=	www
