--- a/openmpi163/files/cshrc.in
+++ b/openmpi163/files/cshrc.in
@@ -4,4 +4,5 @@ if ( $status != 0 ) then
     setenv MPI_PREFIX           %%MPI_PREFIX%%
     setenv PATH                 $MPI_PREFIX/bin:$MPI_PREFIX/sbin:$PATH
     setenv MANPATH              $MPI_PREFIX/man:$MANPATH
+    setenv LD_LIBRARY_PATH      $MPI_PREFIX/lib:$LD_LIBRARY_PATH
 endif
