--- a/openmpi163/files/module.in
+++ b/openmpi163/files/module.in
@@ -2,8 +2,7 @@
 proc ModulesHelp { } {
     puts stdout "\n\tAll openmpi-based software installed via the pkgsrc package management"
     puts stdout "\tsystem. This module prepends the pkgsrc openmpi directories to"
-    puts stdout "\tthe following environment variable(s):"
-    puts stdout "\n\tPATH\n\tMANPATH\n"
+    puts stdout "\tappropriate environment variable(s)."
 }
 
 module-whatis   "All openmpi-based software installed via pkgsrc"
@@ -13,6 +12,7 @@ set     install_prefix  %%MPI_PREFIX%%
 prepend-path    PATH			$install_prefix/bin
 prepend-path    PATH			$install_prefix/sbin
 prepend-path    MANPATH			$install_prefix/man
+prepend-path    LD_LIBRARY_PATH		$install_prefix/lib
 setenv          PKGSRC_OPENMPI		$install_prefix
 setenv          PKGSRC_OPENMPI_INCLUDE	$install_prefix/include
 setenv          PKGSRC_OPENMPI_LIB	$install_prefix/lib
