--- a/openmpi163/Makefile
+++ b/openmpi163/Makefile
@@ -60,6 +60,18 @@ BUILDLINK_PASSTHRU_RPATHDIRS+=	${MPI_PREFIX}/lib
 USE_TOOLS+=		perl:run
 REPLACE_PERL+=		ompi/tools/wrappers/mpijavac.pl.in
 
+# A -R flag is being mysteriously inserted into the mpi wrapper flags,
+# which is not supported by the Darwin linker.  This hack replaces
+# it with a harmless extra -L until I can figure out how to prevent it.
+# The same -R appears on Linux, but does not cause problems.
+# SUBST refused to edit binary files, so do it manually.
+.if ${OPSYS} == "Darwin" || ${OPSYS} == "Linux"
+SUBST_CLASSES+=	opal
+SUBST_STAGE.opal=	post-build
+SUBST_FILES.opal=	${WRKSRC}/opal/tools/wrappers/.libs/opal_wrapper
+SUBST_SED.opal=		-e 's|-R|-L|g'
+.endif
+
 .include "options.mk"
 
 TEST_TARGET=	check
