--- a/celery/Makefile
+++ b/celery/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD$
 #
 
-DISTNAME=	celery-3.0.19
+DISTNAME=	celery-3.0.20
 CATEGORIES=	net
 MASTER_SITES=	http://pypi.python.org/packages/source/c/celery/
 
@@ -10,7 +10,7 @@ HOMEPAGE=	http://www.celeryproject.org/
 COMMENT=	Asynchronous task/job queue based on distributed message passing
 LICENSE=	modified-bsd # AND cc-by-nc-sa-v3.0
 
-USE_LANGUAGES=	# none
+USE_LANGUAGES=	c
 
 DEPENDS+=	${PYPKGPREFIX}-anyjson-[0-9]*:../../wip/py-anyjson
 DEPENDS+=	${PYPKGPREFIX}-billiard-[0-9]*:../../wip/py-billiard
