MAKE_FLAGS+=    appdefaultdir=${PREFIX}/lib/X11/app-defaults

--- a/xedit/Makefile
+++ b/xedit/Makefile
@@ -14,6 +14,8 @@ COMMENT=	Simple text editor for X
 GNU_CONFIGURE=	yes
 USE_TOOLS+=	pkg-config
 
+MAKE_FLAGS+=	appdefaultdir=${PREFIX}/lib/X11/app-defaults
+
 .include "../../x11/libXt/buildlink3.mk"
 .include "../../x11/libXmu/buildlink3.mk"
 .include "../../x11/libXaw/buildlink3.mk"
