Dependencies imported to HEAD. s/wip/${CATEGORY}/.

--- a/celery/Makefile
+++ b/celery/Makefile
@@ -12,8 +12,8 @@ LICENSE=	modified-bsd # AND cc-by-nc-sa-v3.0
 
 USE_LANGUAGES=	c
 
-DEPENDS+=	${PYPKGPREFIX}-anyjson-[0-9]*:../../wip/py-anyjson
-DEPENDS+=	${PYPKGPREFIX}-billiard-[0-9]*:../../wip/py-billiard
-DEPENDS+=	${PYPKGPREFIX}-kombu-[0-9]*:../../wip/py-kombu
+DEPENDS+=	${PYPKGPREFIX}-anyjson-[0-9]*:../../textproc/py-anyjson
+DEPENDS+=	${PYPKGPREFIX}-billiard-[0-9]*:../../parallel/py-billiard
+DEPENDS+=	${PYPKGPREFIX}-kombu-[0-9]*:../../net/py-kombu
 .include "../../lang/python/egg.mk"
 .include "../../mk/bsd.pkg.mk"
