update to latest version (git:6c94317)

--- a/mtr-current/Makefile
+++ b/mtr-current/Makefile
@@ -2,8 +2,8 @@
 
 CATEGORIES=	net
 PKGBASE=	mtr
-PKGVERSION=	0.84.99
-PKGREVISION=	1
+PKGVERSION=	0.85.99
+#PKGREVISION=	1
 #
 PKGNAME=	${PKGBASE}-${PKGVERSION}
 DISTNAME=	${PKGBASE}-${GITVERSION}
@@ -20,7 +20,7 @@ MASTER_SITES=	https://github.com/${GITHUB_USER}/${PKGBASE}/tarball/${GITVERSION}
 FETCH_USING=	curl
 WRKSRC=		${WRKDIR}/${GITHUB_USER}-${PKGBASE}-${GITVERSION}
 
-GITVERSION=	16c6a85
+GITVERSION=	6c94317
 GITHUB_USER=	traviscross
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
