Revert to compile and install libiberty.a. This is thought as necessary for simulavr, but it turned out that libiberty.a and libbfd.a are natively compiled and not useful for those purpose (To be fixed later).

--- a/avr-binutils/Makefile
+++ b/avr-binutils/Makefile
@@ -43,5 +43,8 @@ post-install:
 	${LIBTOOL} --mode install ${INSTALL_DATA} libbfd.la ${DESTDIR}${PREFIX}/avr/lib;	\
 	${INSTALL_DATA} bfd.h ${DESTDIR}${PREFIX}/avr/include;	\
 	)
-
+	(cd ${WRKSRC}/libiberty;				\
+	${MV} ${DESTDIR}${PREFIX}/lib/libiberty.a		\
+	      ${DESTDIR}${PREFIX}/avr/lib/libiberty.a		\
+	)
 .include "../../mk/bsd.pkg.mk"
