--- a/mupen64plus/Makefile
+++ b/mupen64plus/Makefile
@@ -1,9 +1,8 @@
 # $NetBSD$
 #
 
-DISTNAME=	mupen64plus-bundle-src-1.99.5
+DISTNAME=	mupen64plus-bundle-src-2.0
 PKGNAME=	${DISTNAME:S/-bundle-src//}
-PKGREVISION=	2
 CATEGORIES=	emulators
 MASTER_SITES=	http://mupen64plus.googlecode.com/files/
 
@@ -24,14 +23,13 @@ INSTALL_ENV+=	MANDIR=${PREFIX}/${PKGMANDIR}
 
 .include "options.mk"
 
-
 do-build:
-		cd ${WRKSRC} && ${SETENV} ${MAKE_ENV} ${BASH} m64p_build.sh;
+	cd ${WRKSRC} && ${SETENV} ${MAKE_ENV} ${BASH} m64p_build.sh;
 
 do-install:
-		cd ${WRKSRC} && ${SETENV} ${INSTALL_ENV} ${BASH} m64p_install.sh;
+	cd ${WRKSRC} && ${SETENV} ${INSTALL_ENV} ${BASH} m64p_install.sh;
 
-
+.include "../../devel/boost-headers/buildlink3.mk"
 .include "../../graphics/glu/buildlink3.mk"
 BUILDLINK_DEPMETHOD.glu=build
 .include "../../graphics/MesaLib/buildlink3.mk"
