Add USE_TOOLS+= gmake

--- a/simulavr/Makefile
+++ b/simulavr/Makefile
@@ -16,7 +16,7 @@ CONFIGURE_ARGS+=	--disable-tests
 CONFIGURE_ARGS+=	--enable-python=python2.7
 CONFIGURE_ARGS+=	--with-bfd=${PREFIX}/avr
 #CONFIGURE_ENV+=		ac_cv_prog_has_texi2dvi=yes ac_cv_prog_has_texi2html=yes
-USE_TOOLS+=		makeinfo
+USE_TOOLS+=		makeinfo gmake
 USE_LANGUAGES+=		c c++
 
 USE_PKGLOCALEDIR=	yes
