--- a/gtksourceviewmm/Makefile
+++ b/gtksourceviewmm/Makefile
@@ -19,12 +19,12 @@ USE_LIBTOOL=	yes
 
 PKGCONFIG_OVERRIDE+=	gtksourceview/gtksourceviewmm.pc.in
 
-BUILD_DEPENDS+=	atkmm-[0-9]*:../../devel/atkmm
-BUILD_DEPENDS+=	cairomm-[0-9]*:../../graphics/cairomm
-BUILD_DEPENDS+= glibmm-[0-9]*:../../devel/glibmm
-BUILD_DEPENDS+=	glib2-[0-9]*:../../devel/glib2
-BUILD_DEPENDS+=	pangomm-[0-9]*:../../devel/pangomm
-BUILD_DEPENDS+=	libsigc++-[0-9]*:../../devel/libsigc++
-.include "../../wip/gtkmm3/buildlink3.mk"
+.include "../../devel/atkmm/buildlink3.mk"
+.include "../../graphics/cairomm/buildlink3.mk"
+.include "../../devel/glibmm/buildlink3.mk"
+.include "../../devel/glib2/buildlink3.mk"
+.include "../../devel/pangomm/buildlink3.mk"
+.include "../../devel/libsigc++/buildlink3.mk"
+.include "../../x11/gtkmm3/buildlink3.mk"
 .include "../../x11/gtksourceview3/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
