--- a/libisoburn/Makefile
+++ b/libisoburn/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD$
 #
 
-DISTNAME=	libisoburn-1.1.8
+DISTNAME=	libisoburn-1.3.0
 CATEGORIES=	sysutils
 MASTER_SITES=	http://files.libburnia-project.org/releases/
 
@@ -11,12 +11,25 @@ COMMENT=	This is the libisoburn library and xorriso commands
 LICENSE=	gnu-gpl-v2
 
 WRKSRC=		${WRKDIR}/${DISTNAME:S/.pl00//}
+
+DEPENDS+=	tcl-[0-9]*:../../lang/tcl
+DEPENDS+=	tk-[0-9]*:../../x11/tk
+
 GNU_CONFIGURE=	yes
 USE_LIBTOOL=	yes
 USE_TOOLS+=	pkg-config
 INFO_FILES=	yes
 
 PKGCONFIG_OVERRIDE+=	libisoburn-1.pc.in
+
+FIND_PREFIX:=	TCLDIR=tcl
+.include "../../mk/find-prefix.mk"
+
+SUBST_CLASSES+=		fix-wish
+SUBST_STAGE.fix-wish=	pre-configure
+SUBST_MESSAGE.fix-wish=	Fixing tcl wish
+SUBST_FILES.fix-wish+=	frontend/xorriso-tcltk
+SUBST_SED.fix-wish+=	-e 's,/usr/bin/wish,${TCLDIR}/bin/wish,'
 
 .include "../../wip/libisofs/buildlink3.mk"
 .include "../../wip/libburn/buildlink3.mk"
