--- a/libburn/Makefile
+++ b/libburn/Makefile
@@ -1,7 +1,8 @@
 # $NetBSD$
 #
 
-DISTNAME=	libburn-1.1.8
+DISTNAME=	libburn-1.3.0.pl01
+PKGNAME=	${DISTNAME:S/pl//}
 CATEGORIES=	sysutils
 MASTER_SITES=	http://files.libburnia-project.org/releases/
 
