--- a/hs-comonad/Makefile
+++ b/hs-comonad/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD$
 #
 
-DISTNAME=	comonad-3.0.2
+DISTNAME=	comonad-3.1
 CATEGORIES=	math
 
 MAINTAINER=	pho@cielonegro.org
@@ -10,5 +10,6 @@ LICENSE=	modified-bsd
 
 .include "../../wip/mk/haskell.mk"
 .include "../../wip/hs-semigroups/buildlink3.mk"
+.include "../../wip/hs-tagged/buildlink3.mk"
 .include "../../wip/hs-transformers/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
