--- a/hs-x11/Makefile
+++ b/hs-x11/Makefile
@@ -11,6 +11,9 @@ COMMENT=	Haskell binding to the X11 graphics library
 LICENSE=	modified-bsd
 
 .include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXinerama/buildlink3.mk"
+.include "../../x11/libXrandr/buildlink3.mk"
+.include "../../x11/libXScrnSaver/buildlink3.mk"
 .include "../../wip/mk/haskell.mk"
 .include "../../wip/hs-data-default/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
