--- a/cacti-spine/Makefile
+++ b/cacti-spine/Makefile
@@ -5,10 +5,10 @@ DISTNAME=	cacti-spine-${VERSION}
 #PKGREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	http://www.cacti.net/downloads/spine/
-DISTFILES=		${DISTNAME}${EXTRACT_SUFX}
-DISTFILES+=		spine.1.gz
-SITES.spine.1.gz=	\
-	http://manpages.ubuntu.com/manpages.gz/precise/man1/
+DISTFILES=		${DEFAULT_DISTFILES}
+#DISTFILES+=		spine.1.gz
+#SITES.spine.1.gz=	\
+#	http://manpages.ubuntu.com/manpages.gz/precise/man1/
 
 MAINTAINER=	pettai@nordu.net
 HOMEPAGE=	http://www.cacti.net/spine_info.php
@@ -28,14 +28,15 @@ DOCDIR=			share/doc/cacti-spine
 EXAMPLES_DIR=		examples
 EGDIR=			${PREFIX}/${DOCDIR}/${EXAMPLES_DIR}
 CONF_FILES=		${EGDIR}/spine.conf.dist ${PKG_SYSCONFDIR}/spine.conf
-INSTALLATION_DIRS=	bin ${DOCDIR} ${DOCDIR}/${EXAMPLES_DIR} ${PKG_SYSCONFDIR} ${PKGMANDIR}/man1
+#INSTALLATION_DIRS=	bin ${DOCDIR} ${DOCDIR}/${EXAMPLES_DIR} ${PKG_SYSCONFDIR} ${PKGMANDIR}/man1
+INSTALLATION_DIRS=	bin ${DOCDIR} ${DOCDIR}/${EXAMPLES_DIR} ${PKG_SYSCONFDIR}
 AUTO_MKDIRS=	yes
 
-SUBST_CLASSES+=			version
-SUBST_STAGE.version=	pre-build
-SUBST_MESSAGE.version=	Substituting version numbers.
-SUBST_FILES.version=	${WRKDIR}/spine.1
-SUBST_VARS.version=		VERSION
+#SUBST_CLASSES+=			version
+#SUBST_STAGE.version=	pre-build
+#SUBST_MESSAGE.version=	Substituting version numbers.
+#SUBST_FILES.version=	${WRKDIR}/spine.1
+#SUBST_VARS.version=		VERSION
 
 
 do-install:
@@ -48,7 +49,7 @@ do-install:
 	${INSTALL_DATA} ${WRKSRC}/LICENSE* ${DESTDIR}${PREFIX}/${DOCDIR}
 	${INSTALL_DATA} ${WRKSRC}/NEWS ${DESTDIR}${PREFIX}/${DOCDIR}
 	${INSTALL_DATA} ${WRKSRC}/README* ${DESTDIR}${PREFIX}/${DOCDIR}
-	${INSTALL_MAN} ${WRKDIR}/spine.1 ${DESTDIR}${PREFIX}/${PKGMANDIR}/man1
+	#${INSTALL_MAN} ${WRKDIR}/spine.1 ${DESTDIR}${PREFIX}/${PKGMANDIR}/man1
 
 .include "../../mk/mysql.buildlink3.mk"
 .include "../../net/net-snmp/buildlink3.mk"
