MASTER_SITE redirects to HTTPS

--- a/py-feedgenerator/Makefile
+++ b/py-feedgenerator/Makefile
@@ -4,8 +4,8 @@
 DISTNAME=		feedgenerator-1.6
 PKGNAME=		${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=		www
-MASTER_SITES=	http://pypi.python.org/packages/source/f/feedgenerator/
-
+MASTER_SITES=	https://pypi.python.org/packages/source/f/feedgenerator/
+FETCH_USING=	curl
 MAINTAINER=		ahp-nils@users.sourceforge.net
 HOMEPAGE=		https://github.com/dmdm/feedgenerator-py3k.git
 COMMENT=		Standalone version of django.utils.feedgenerator, compatible with Py3k
