--- a/pelican/Makefile
+++ b/pelican/Makefile
@@ -1,14 +1,20 @@
 # $NetBSD: Makefile,v 1.27 2013/03/13 20:36:26 gls Exp $
 #
 
-DISTNAME=		pelican-3.2.2
+DISTNAME=		${VERSION}
+PKGNAME=		pelican-${DISTNAME}
 CATEGORIES=		www textproc
-MASTER_SITES=	http://pypi.python.org/packages/source/p/pelican/
+MASTER_SITES=	https://github.com/getpelican/pelican/archive/
 
 MAINTAINER=		ahp-nils@users.sourceforge.net
 HOMEPAGE=		http://blog.getpelican.com/
 COMMENT=		Static site generator that supports Markdown and reST syntax
 LICENSE=		gnu-agpl-v3
+
+VERSION=		3.2.2
+WRKSRC=			${WRKDIR}/${PKGNAME_NOREV}
+EXTRACT_SUFX=	.zip
+FETCH_USING=	curl
 
 PYTHON_VERSIONS_INCOMPATIBLE=26 31 32
 
