Recent setup for 7.6 does not support   bfd_target_elf_flavour instead only supports   bfd_target_aout_flavour   bfd_target_coff_flavour   bfd_target_ecoff_flavour. To fix this, we need +CONFIGURE_ENV+=                gdb_cv_var_elf=yes as found in native gdb setup (pkgsrc Makefile).

--- a/avr-gdb/Makefile
+++ b/avr-gdb/Makefile
@@ -14,6 +14,14 @@ GNU_CONFIGURE=		yes
 CONFIGURE_ENV+=		CONFIG_LDFLAGS=${LDFLAGS:M*:Q}
 CONFIGURE_ARGS+=	--target=avr
 CONFIGURE_ARGS+=	--program-prefix=avr
+CONFIGURE_ARGS+=	-with-curses
+# elfread.c is to be included in init.c to support bfd_target_elf_flavour
+CONFIGURE_ENV+=		gdb_cv_var_elf=yes
+MAKE_ENV+=		gdb_cv_var_elf=yes
+# Native gdb has following lines also activated
+#CONFIGURE_ENV+=		gdb_cv_struct_lwp=yes
+#MAKE_ENV+=		gdb_cv_struct_lwp=yes
+
 
 INSTALLATION_DIRS=	bin
 TEST_TARGET=		check
