Updated to latest version. From ChangeLog: - Now depends on :mod:`billiard` 2.7.3.31.     This version fixed a bug when running without the billiard C extension.

--- a/celery/Makefile
+++ b/celery/Makefile
@@ -1,9 +1,10 @@
 # $NetBSD$
 #
 
-DISTNAME=	celery-3.0.20
+DISTNAME=	celery-3.0.21
 CATEGORIES=	net
 MASTER_SITES=	http://pypi.python.org/packages/source/c/celery/
+FETCH_USING=	curl
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.celeryproject.org/
