--- a/twintk/Makefile
+++ b/twintk/Makefile
@@ -2,7 +2,7 @@
 #
 
 DISTNAME=	twintk-0.9.3
-CATEGORIES=	jb-wip
+CATEGORIES=	devel
 MASTER_SITES=	http://personalpages.tds.net/~jwbacon/Ports/distfiles/
 
 MAINTAINER=	jwbacon@tds.net
@@ -14,5 +14,5 @@ PKG_DESTDIR_SUPPORT=	user-destdir
 
 INSTALL_MAKE_FLAGS+=	PREFIX=${DESTDIR}${PREFIX}
 
-.include "../../jb-wip/libbacon/buildlink3.mk"
+.include "../../wip/libbacon/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
