--- a/avr-gdb/Makefile
+++ b/avr-gdb/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD: Makefile,v 1.17 2012/10/03 00:10:29 asau Exp $
 
 DISTNAME=	gdb-7.6
-PKGNAME=	avr-gdb-7.6
+PKGNAME=	${DISTNAME:S/^/avr-/}
 CATEGORIES=	cross
 MASTER_SITES=	${MASTER_SITE_GNU:=gdb/}
 
@@ -14,7 +14,7 @@ GNU_CONFIGURE=		yes
 CONFIGURE_ENV+=		CONFIG_LDFLAGS=${LDFLAGS:M*:Q}
 CONFIGURE_ARGS+=	--target=avr
 CONFIGURE_ARGS+=	--program-prefix=avr
-CONFIGURE_ARGS+=	-with-curses
+CONFIGURE_ARGS+=	--with-curses
 # elfread.c is to be included in init.c to support bfd_target_elf_flavour
 CONFIGURE_ENV+=		gdb_cv_var_elf=yes
 MAKE_ENV+=		gdb_cv_var_elf=yes
@@ -31,6 +31,10 @@ pre-configure:
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/gdb/gdb ${DESTDIR}${PREFIX}/bin/avr-gdb
+
+# to link -lcurses.7 => /usr/lib/libcurses.so.7
+# instead of terminfo
+.include "../../mk/curses.buildlink3.mk"
 
 .include "../../mk/termcap.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
