--- a/hs-distributive/Makefile
+++ b/hs-distributive/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD$
 #
 
-DISTNAME=	distributive-0.2.0.1
+DISTNAME=	distributive-0.3.1
 CATEGORIES=	devel
 
 MAINTAINER=	pho@cielonegro.org
@@ -10,4 +10,5 @@ LICENSE=	modified-bsd
 
 .include "../../wip/mk/haskell.mk"
 .include "../../wip/hs-transformers/buildlink3.mk"
+.include "../../wip/hs-transformers-compat/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
