Update for new svn locations on SourceForge.

--- a/electricsheep-svn/Makefile
+++ b/electricsheep-svn/Makefile
@@ -22,7 +22,7 @@ GNU_CONFIGURE=		YES
 USE_TOOLS+=		pkg-config gmake
 
 SVN_REPOSITORIES=	client
-SVN_ROOT.client=	http://electricsheep.svn.sourceforge.net/svnroot/electricsheep/trunk/client
+SVN_ROOT.client=	http://svn.code.sf.net/p/electricsheep/code/trunk/client
 			# OLD! Should now be 
 			# Our SVN is now hosted by Google: http://code.google.com/p/electricsheep/source/checkout
 WRKSRC=			${WRKDIR}/client
