--- a/hs-tagsoup/Makefile
+++ b/hs-tagsoup/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD$
 #
 
-DISTNAME=	tagsoup-0.8
+DISTNAME=	tagsoup-0.12.8
 CATEGORIES=	textproc
 
 MAINTAINER=	pho@cielonegro.org
@@ -10,6 +10,5 @@ COMMENT=	Haskell library for parsing unstructured HTML code
 LICENSE=	modified-bsd
 
 .include "../../wip/mk/haskell.mk"
-.include "../../wip/hs-mtl/buildlink3.mk"
-.include "../../wip/hs-network/buildlink3.mk"
+.include "../../wip/hs-text/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
