--- a/deforaos-browser/Makefile
+++ b/deforaos-browser/Makefile
@@ -37,6 +37,7 @@ post-install:
 
 .include "options.mk"
 
+.include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../wip/deforaos-libdesktop/buildlink3.mk"
 .include "../../x11/libXrandr/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
