--- a/deforaos-mailer/Makefile
+++ b/deforaos-mailer/Makefile
@@ -30,6 +30,7 @@ post-install:
 
 .include "options.mk"
 
+.include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../security/openssl/buildlink3.mk"
 .include "../../wip/deforaos-libdesktop/buildlink3.mk"
 .include "../../textproc/gtk-doc/buildlink3.mk"
