--- a/hs-texmath/Makefile
+++ b/hs-texmath/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD$
 
-DISTNAME=	texmath-0.6.3
+DISTNAME=	texmath-0.6.4
 CATEGORIES=	textproc
 
 MAINTAINER=	szptvlfn@a-net.email.ne.jp
@@ -9,6 +9,7 @@ LICENSE=	gnu-gpl-v2
 
 
 .include "../../wip/mk/haskell.mk"
+.include "../../wip/hs-pandoc-types/buildlink3.mk"
 .include "../../wip/hs-parsec/buildlink3.mk"
 .include "../../wip/hs-syb/buildlink3.mk"
 .include "../../wip/hs-xml/buildlink3.mk"
