Remove conflict by installing into a subdir (same as devel/libev). Add bl3.

--- a/libeio/Makefile
+++ b/libeio/Makefile
@@ -10,14 +10,14 @@ HOMEPAGE=	http://software.schmorp.de/pkg/libeio.html
 COMMENT=	Full-featured asynchronous I/O library for C
 LICENSE=	2-clause-bsd OR gnu-gpl-v2
 
-# Also installs libeio.la
-CONFLICTS+=	eio-[0-9]*
-
 GNU_CONFIGURE=	yes
 USE_LIBTOOL=	yes
 USE_TOOLS+=	autoconf automake
 
 WRKSRC=	${WRKDIR}/${PKGBASE}-${DISTNAME}
+
+GNU_CONFIGURE_LIBSUBDIR=eio
+CONFIGURE_ARGS+=	--includedir=${PREFIX}/include/eio
 
 pre-configure:
 	cd ${WRKSRC} && ${SH} ./autogen.sh
